@@ -1,9 +1,9 @@
 # The pylon version this source tree was designed for, by platform
 ReferencePylonVersion = {
-    "Windows": "6.1.1",
+    "Windows": "6.2.0",
     # ATTENTION: This version is the pylon core version reported by pylon-config, 
     # which is not equal to the version on the outer tar.gz
-    "Linux": "6.1.0",
-    "Linux_x86_64": "6.1.1",
+    "Linux": "6.2.0",
+    "Linux_x86_64": "6.2.0",
     "Darwin": "6.1.2"
 }
